--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,30 @@
-pybuilder==0.13.13
+pybuilder~=0.13.14
 pylint==3.2.7
+
+sympy~=1.10.1
+jupyter~=1.0.0
+pip~=21.2.4
+panel~=0.13.0
+dataclasses~=0.8
+attrs~=21.4.0
+zlib~=1.2.12
+wheel~=0.37.1
+pysocks~=1.7.1
+protobuf~=3.19.1
+openssl~=1.1.1n
+pyopenssl~=21.0.0
+cryptography~=3.4.8
+pillow~=9.0.1
+docutils~=0.17.1
+sphinx~=4.4.0
+filelock~=3.6.0
+typing_extensions~=4.1.1
+setuptools~=61.2.0
+pytest~=7.1.1
+packaging~=21.3
+platformdirs~=4.3.6
+zipp~=3.7.0
+cython~=0.29.28
+future~=0.18.2
+pygments~=2.11.2
+lxml~=4.8.0
