--- a/requirements.txt
+++ b/requirements.txt
@@ -5,13 +5,13 @@ sympy~=1.10.1
 jupyter~=1.0.0
 pip~=21.2.4
 panel~=0.13.0
-dataclasses~=0.8
+#dataclasses~=0.8
 attrs~=21.4.0
-zlib~=1.2.12
+#zlib~=1.2.12
 wheel~=0.37.1
 pysocks~=1.7.1
 protobuf~=3.19.1
-openssl~=1.1.1n
+#openssl~=1.1.1n
 pyopenssl~=21.0.0
 cryptography~=3.4.8
 pillow~=9.0.1
